Messages overflow fixes

--- a/src/pages/Chat/components/Messages/Messages.css
+++ b/src/pages/Chat/components/Messages/Messages.css
@@ -1,7 +1,8 @@
 .messages {
   flex: 1;
   padding: 56px 32px;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: unset;
 }
 
 .messages-incoming, .messages-outgoing {
